--- a/contact/contact/index.html
+++ b/contact/contact/index.html
@@ -39,7 +39,7 @@ If there is any questions, please email me.">
 </div>
 <header class="nav">
   <nav class="nav-menu">
-    <a href=https://Lorpaves.github.io class="nav-brand nav_item">
+    <a href=https://Lorpaves.github.io/ class="nav-brand nav_item">
         Goals</a>
     <div class="nav_bar-wrap">
       <div class="nav_bar"></div>
@@ -74,7 +74,7 @@ If there is any questions, please email me.">
         </div>
       </div>
     </div>
-    <a href=https://Lorpaves.github.io class="post_nav"><span class="post_next">Latest Posts
+    <a href=https://Lorpaves.github.io/ class="post_nav"><span class="post_next">Latest Posts
       <svg class="icon icon_scale">
         <use xlink:href="#double-arrow"></use>
       </svg>
