--- a/404.html
+++ b/404.html
@@ -12,23 +12,23 @@
 <meta property="og:type" content="article">
 <meta property="og:title" content="404 Page not found">
 <meta property="og:description" content="">
-<meta property="og:url" content="https://Lorpaves.github.io/404.html">
-<meta property="og:image" content="https://Lorpaves.github.io/images/">
-<link rel="canonical" href="https://Lorpaves.github.io/404.html">
+<meta property="og:url" content="https://lorpaves.github.io/404.html">
+<meta property="og:image" content="images/%!s()">
+<link rel="canonical" href="https://lorpaves.github.io/404.html">
 
-<link rel="apple-touch-icon" sizes="180x180" href='https://Lorpaves.github.io/images/icons/apple-touch-icon.png'>
-<link rel="icon" type="image/png" sizes="32x32" href='https://Lorpaves.github.io/images/icons/favicon-32x32.png'>
-<link rel="icon" type="image/png" sizes='16x16' href='https://Lorpaves.github.io/images/icons/favicon-16x16.png'>
-<link rel="manifest" href='https://Lorpaves.github.io/images/icons/site.webmanifest'>
+<link rel="apple-touch-icon" sizes="180x180" href='https://lorpaves.github.io/apple-touch-icon.png'>
+<link rel="icon" type="image/png" sizes="32x32" href='https://lorpaves.github.io/favicon-32x32.png'>
+<link rel="icon" type="image/png" sizes='16x16' href='https://lorpaves.github.io/favicon-16x16.png'>
+<link rel="manifest" href='https://lorpaves.github.io/site.webmanifest'>
 
-<link rel="stylesheet" href="https://Lorpaves.github.io/css/styles.7709a615e70eb45e6990dee5e72ec0593e6ba6a4ba4e0ebdce90b3df7fa26fbb58e8cfc01903405b10afbaa50280c78bb4b1cc9efd6933849431547f66311ebe.css" integrity="sha512-dwmmFecOtF5pkN7l5y7AWT5rpqS6Tg69zpCz33&#43;ib7tY6M/AGQNAWxCvuqUCgMeLtLHMnv1pM4SUMVR/ZjEevg==">
+<link rel="stylesheet" href="https://lorpaves.github.io/css/styles.2139d5c60c4f38eac8689d90fa71124889244787f0eee8d4ed6bc0db71c790fe9f3a9c4ea1413270c9f967b8bc47219112774b212d64c43c23988fcf707cd4c6.css" integrity="sha512-ITnVxgxPOOrIaJ2Q&#43;nESSIkkR4fw7ujU7WvA23HHkP6fOpxOoUEycMn5Z7i8RyGREndLIS1kxDwjmI/PcHzUxg==">
 </head>
 
   <body>
     <div class="nav-drop">
   <div class="nav-body">
-      <a href="https://Lorpaves.github.io/post/" class="nav_item">Tutorial</a>
-      <a href="https://Lorpaves.github.io/contact/" class="nav_item">Help</a>
+      <a href="https://lorpaves.github.io/contact/" class="nav_item">Help</a>
+      <a href="https://lorpaves.github.io/post/" class="nav_item">Blog</a>
     <div class="nav-close"></div><div class="color_mode">
   <label for="mode">Toggle Dark Mode</label>
   <input type="checkbox" class="color_choice" id="mode">
@@ -38,7 +38,7 @@
 </div>
 <header class="nav">
   <nav class="nav-menu">
-    <a href=https://Lorpaves.github.io/ class="nav-brand nav_item">
+    <a href=https://lorpaves.github.io/ class="nav-brand nav_item">
         Goals</a>
     <div class="nav_bar-wrap">
       <div class="nav_bar"></div>
@@ -57,11 +57,11 @@
     </main>
     <footer class="footer wrap pale">
   <p>&copy;&nbsp;<span class="year"></span>&nbsp;Goals</p>
-  <p class="attribution upcase">Designed by  <a href = 'https://www.linkedin.com/in/dan-weru-profile/' target = '_blank' title = 'Linkedin Profile' rel = 'nonopener'>Weru</a></p>
+  <p class="attribution upcase">Designed by  <a href = '<no value>' target = '_blank' title = 'Linkedin Profile' rel = 'nonopener'><no value></a></p>
 </footer>
 
 
-<script src="https://Lorpaves.github.io/js/index.min.7046dd488bdddad3c69657285339d4e94dad3f91b94ea6f7696a1c8a2e4789b59085e04b6f102fe9a56ebec6012e65cacda211216c6e47c47d09858feca6a2c4.js"></script>
+<script src="https://lorpaves.github.io/js/index.min.0cbf66faff6d0b5559b9e3e75d87449cbc2fe83f4c9b5a2bff51ea7192c78820546c771bc52629ee861f667c2ac196d1f3568ee9b789aa87f0e058cff38cc715.js"></script>
 
     <svg width="0" height="0" class="hidden">
   <symbol xmlns="http://www.w3.org/2000/svg" viewBox="0 0 699.428 699.428" id="copy">
